--- a/templates/pdf/cn23.html.twig
+++ b/templates/pdf/cn23.html.twig
@@ -97,7 +97,7 @@
 				<td style="width:20%; vertical-align:bottom;  padding:5px;  border-bottom:1px #000 solid;">Postcode<span
 						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
 				</td>
-				<td style="border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;" colspan="2">Cyty<span
+				<td style="border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;" colspan="2">City<span
 						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
 				</td>
 				<td style="width:20%; border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;">Postcode<span
