--- a/templates/pdf/cn23.html.twig
+++ b/templates/pdf/cn23.html.twig
@@ -94,52 +94,52 @@
 			</tr>
 			<tr>
 
-				<td style="border-bottom: 1px #000 solid; vertical-align:bottom; padding:5px" colspan="2">Street</td>
+				<td style="border-bottom: 1px #000 solid; vertical-align:bottom; padding:5px" colspan="2">Street {{s10code.fromStreet}} </td>
 
 				<td style="border-bottom: 1px #000 solid; border-right:1px #000 solid;vertical-align:bottom; padding:5px "
-					colspan="2">Street</td>
+					colspan="2">Street {{s10code.toStreet}}</td>
 			</tr>
 			<tr>
 				<td style="width:20%; vertical-align:bottom;  padding:5px;  border-bottom:1px #000 solid;">Postcode<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"> {{s10code.fromPostcode}} </span>
 				</td>
 				<td style="border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;" colspan="2">City<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{s10code.fromCity}}</span>
 				</td>
 				<td style="width:20%; border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;">Postcode<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"> {{s10code.toPostcode}} </span>
 				</td>
 				<td
 					style="border-bottom:1px #000 solid; border-right:1px #000 solid; padding:5px; vertical-align:bottom;">
 					City<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"> {{s10code.toCity}} </span>
 				</td>
 
 			</tr>
 			<tr>
 				<td style="width:20%; vertical-align:bottom;  padding:5px; border-bottom:1px #000 solid; " colspan="3">
 					Country<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"> {{s10code.fromCountry.name}} </span>
 				</td>
 
 				<td style="width:20%; padding:5px; vertical-align:bottom; border-bottom:1px #000 solid;" colspan="3">
-					Country<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0"></span>
+					Country<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0"> {{s10code.toCountry.name}} </span>
 				</td>
 			</tr>
 			<tr>
 				<td style="width:20%; vertical-align:bottom;  padding:5px;  border-bottom:1px #000 solid;">Tel.<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"> {{s10code.fromTel}} </span>
 				</td>
 				<td style="border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;" colspan="2">E-mail<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{s10code.fromEmail}}</span>
 				</td>
 				<td style="width:20%; border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;">Tel.<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"> {{s10code.toTel}} </span>
 				</td>
 				<td
 					style="border-bottom:1px #000 solid; border-right:1px #000 solid; padding:5px; vertical-align:bottom;">
 					E-mail<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span>
+						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"> {{s10code.toEmail}} </span>
 				</td>
 
 			</tr>
@@ -250,13 +250,12 @@
 							<td
 								style="width: 135px; height:20px; font-size:14px; border-left:1px #000 solid; border-bottom:1px #000 solid; ">
 								Total gross weight <p
-									style="padding: 2px 0 0 0; margin:0; text-align:right; font-weight:600;">0.0040</p>
+									style="padding: 2px 10px 0 0; margin:0; text-align:right; font-weight:600;"> {{s10code.totalGrossWeight}} </p>
 							</td>
 							<td
 								style="width: 135px; height:20px; font-size:14px; border-left:1px #000 solid; border-bottom:1px #000 solid; border-right:1px #000 solid;">
-								Total value <p style="padding: 2px 0 0 0; margin:0; text-align:right; font-weight:600;">
-									2300
-									DOP</p>
+								Total value <p style="padding: 2px 10px 0 0; margin:0; text-align:right; font-weight:600;">
+								{{s10code.totalValue}}	</p>
 							</td>
 						</tr>
 					</tbody>
@@ -301,13 +300,13 @@
 						</td>
 						<td style="padding-left: 5px; vertical-align:middle; border-bottom:1px #000 solid;">Other</td>
 						<td style="width: 20px; border-bottom:1px #000 solid;"></td>
-						<td style="border-bottom:1px #000 solid;">Explanation:</td>
+						<td style="border-bottom:1px #000 solid;">Explanation: {{s10code.categoryItemExplanation}} </td>
 					</tr>
 					{# Comments #}
 					<tr>
 						<td style="width: 44px;"></td>
 						<td style="height: 40px; vertical-align:top; padding-left:5px; border-left: 1px #000 solid; border-bottom: 1px #000 solid;"
-							colspan="6">Comments:</td>
+							colspan="6">Comments: {{s10code.comments}} </td>
 
 					</tr>
 					{# Licence #}
@@ -345,9 +344,9 @@
 					<tr>
 						<td style="width: 44px;"></td>
 						<td style="padding-left:5px; height:60px; border-left: 1px #000 solid; border-bottom:1px #000 solid; vertical-align:top;"
-							colspan="3">Date and signature</td>
+							colspan="3">Date and signature </td>
 						<td style="padding-left:5px; border-bottom:1px #000 solid; vertical-align:top;" colspan="3">
-							Declaration ID</td>
+							Declaration ID {{s10code.declarationIdentity}} </td>
 					</tr>
 
 				</table>
@@ -419,29 +418,29 @@
 							colspan="2">Acceptance information</td>
 					</tr>
 					<tr>
-						<td style="border-bottom:1px #000 solid; height:25px;">Item weight (kg)</td>
+						<td style="border-bottom:1px #000 solid; height:25px;">Item weight (kg) {{s10code.acceptanceInfItemWeight}} </td>
 						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
 					</tr>
 					<tr>
-						<td style="border-bottom:1px #000 solid; height:25px;">Postal charges/Fees</td>
+						<td style="border-bottom:1px #000 solid; height:25px;">Postal charges/Fees {{s10code.acceptanceInfPostalChargesFees}} </td>
 						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
 					</tr>
 					<tr>
-						<td style="border-bottom:1px #000 solid; height:25px;">Insurance</td>
+						<td style="border-bottom:1px #000 solid; height:25px;">Insurance {{s10code.acceptanceInfInsurance}} </td>
 						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
 					</tr>
 					<tr>
-						<td style="border-bottom:1px #000 solid; height:25px;">Total</td>
+						<td style="border-bottom:1px #000 solid; height:25px;">Total {{s10code.acceptanceInfTotal}} </td>
 						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
 					</tr>
 					<tr>
-						<td style="border-bottom:1px #000 solid; height:25px;">Office</td>
-						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
+						<td style="border-bottom:1px #000 solid; height:25px;">Office {{s10code.acceptanceInfOffice}}</td>
+						<td style="text-align: right; border-bottom:1px #000 solid;">  </td>
 					</tr>
 					<tr>
 						<td
 							style="border-bottom:1px #000 solid; border-right:1px #000 solid; width:220px; height:25px;">
-							Date</td>
+							Date  </td>
 						<td style="border-bottom:1px #000 solid;">Time</td>
 					</tr>
 					<tr>
@@ -451,15 +450,15 @@
 					<tr>
 						<td
 							style="border-bottom:1px #000 solid; border-right:1px #000 solid; width:220px; height:25px;">
-							Date</td>
-						<td style="border-bottom:1px #000 solid;">Time</td>
+							Date  </td>
+						<td style="border-bottom:1px #000 solid;">Time  </td>
 					</tr>
 					<tr>
-						<td style="border-bottom:1px #000 solid; height:25px;">Person name</td>
+						<td style="border-bottom:1px #000 solid; height:25px;">Person name {{s10code.deliveryInformationPersonName}} </td>
 						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
 					</tr>
 					<tr>
-						<td style="border-bottom:1px #000 solid; height:64px; vertical-align:top;">signature</td>
+						<td style="border-bottom:1px #000 solid; height:64px; vertical-align:top;">signature {{s10code.deliveryInformationSignature}} </td>
 						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
 					</tr>
 				</table>
