Se realizan ajuste de diseño al formulario cn23

--- a/templates/pdf/cn23.html.twig
+++ b/templates/pdf/cn23.html.twig
@@ -78,16 +78,16 @@
 				<td style="width:40px; font-size:18px; vertical-align:top; padding:5px 5px 0 0; " rowspan="5">From</td>
 				<td style="width:37.1%; border:1px #000 solid; vertical-align:bottom; padding:5px" colspan="2">Name
 					<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{
 						s10code.fromName }}</span>
 				</td>
 				<td style="width:138px; border: 1px #000 solid; vertical-align:top;" rowspan="2">Sender's customs
 					reference (if any): {{ s10code.sendersCustomsReference }}</td>
-				<td style="width:45px; font-size:18px; border-right: 1px #000 solid; vertical-align:top; padding:5px 0 0 5px;"
+				<td style="width:50px; font-size:18px; border-right: 1px #000 solid; vertical-align:top; padding:5px 0 0 5px;"
 					rowspan="5">To</td>
 				<td style="border-bottom: 1px #000 solid; border-right: 1px #000 solid; vertical-align:bottom; "
 					colspan="2">Name <span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{
 						s10code.toName }}</span>
 				</td>
 
@@ -102,20 +102,20 @@
 			</tr>
 			<tr>
 				<td style="width:20%; vertical-align:bottom;  padding:5px;  border-bottom:1px #000 solid;">Postcode<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
 						{{s10code.fromPostcode}} </span>
 				</td>
 				<td style="border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;" colspan="2">City<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{s10code.fromCity}}</span>
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{s10code.fromCity}}</span>
 				</td>
-				<td style="width:20%; border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;">Postcode<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
+				<td style="width:15%; border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;">Postcode<span
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
 						{{s10code.toPostcode}} </span>
 				</td>
 				<td
-					style="border-bottom:1px #000 solid; border-right:1px #000 solid; padding:5px; vertical-align:bottom;">
+					style="width:24%;border-bottom:1px #000 solid; border-right:1px #000 solid; padding:5px; vertical-align:bottom;">
 					City<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
 						{{s10code.toCity}} </span>
 				</td>
 
@@ -123,31 +123,31 @@
 			<tr>
 				<td style="width:20%; vertical-align:bottom;  padding:5px; border-bottom:1px #000 solid; " colspan="3">
 					Country<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
 						{{s10code.fromCountry.name}} </span>
 				</td>
 
 				<td style="width:20%; padding:5px; vertical-align:bottom; border-bottom:1px #000 solid;" colspan="3">
-					Country<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0">
+					Country<span style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0">
 						{{s10code.toCountry.name}} </span>
 				</td>
 			</tr>
 			<tr>
 				<td style="width:20%; vertical-align:bottom;  padding:5px;  border-bottom:1px #000 solid;">Tel.<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
 						{{s10code.fromTel}} </span>
 				</td>
 				<td style="border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;" colspan="2">E-mail<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{s10code.fromEmail}}</span>
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">{{s10code.fromEmail}}</span>
 				</td>
 				<td style="width:20%; border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;">Tel.<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
 						{{s10code.toTel}} </span>
 				</td>
 				<td
 					style="border-bottom:1px #000 solid; border-right:1px #000 solid; padding:5px; vertical-align:bottom;">
 					E-mail<span
-						style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
+						style="font-size:12px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;">
 						{{s10code.toEmail}} </span>
 				</td>
 
@@ -444,7 +444,7 @@
 				</table>
 				<span style="font-size: 8px;  margin:0; padding:0 0 0 60px;">© Universal Postal Union, CDS</span>
 			</div>
-			<div style="display: inline-block;  margin-left:-4px; width:387px; height:510px">
+			<div style="display: inline-block;  margin-left:-4px; width:387px; height:514px">
 
 
 				<table style="border-collapse: collapse; width:100%; border:1px #000 solid;">
@@ -557,7 +557,7 @@
 						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
 					</tr>
 					<tr>
-						<td style="border-bottom:1px #000 solid; height:64px; vertical-align:top;">signature
+						<td style="border-bottom:1px #000 solid; height:67px; vertical-align:top;">signature
 							{{s10code.deliveryInformationSignature}} </td>
 						<td style="text-align: right; border-bottom:1px #000 solid;"></td>
 					</tr>
